crates/icydb-core/tests/ui/db/executor/cannot_import_query_plan_planner.rs
use icydb_core::db::query::plan::planner;

fn main() {}
